--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit
-python
-pandas
-snowflake
-snowflake-ml-python
-snowflake.core
-snowflake-snowpark-python
+streamlit==1.26.0
+python==3.09
+pandas==2.1.0
+snowflake-ml-python==1.6.2
+snowflake.core==0.9.0
+snowflake-snowpark-python==1.22.1
 snowflake-connector-python
 functools
